--- a/style.css
+++ b/style.css
@@ -94,4 +94,8 @@ button + button {
 img {
   width: 100%;
   height: auto;
+}
+
+#photo-file {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
